--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/prismjs": "^1.26.6",
     "typescript": "~5.9.3",
     "vite": "^7.3.1"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "prismjs": "^1.30.0",
     "tailwindcss": "^4.1.18"
   }
 }
